[package]
name = "proxima-centauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "proxy"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "ping-server"
path = "src/bin/ping_server.rs"

[[bin]]
name = "ping-client"
path = "src/bin/ping_client.rs"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.11", features = ["json"] }
clap = { version = "4.3.0", features = ["derive"] }
p384 = { version = "0.13.0", features = ["ecdsa", "serde"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
